<resources>
    <string name="app_name">New Multiple Restaurants App</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="update_information">Update Information</string>
    <string name="order_history">Order History</string>
    <string name="nearby_restaurant">Near By Restaurant</string>
    <string name="update_info">Update Information</string>
    <string name="money_sign">$</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="view_cart">View Cart</string>
    <string name="size">Size</string>
    <string name="add_on">Add On</string>
    <string name="description">Description</string>
    <string name="nav_favorite">Favorites</string>
    <string name="place_order">Place Order</string>
    <string name="cart">Cart</string>
</resources>